# quarter

./: .gitignore  CHANGELOG.md  CLAUDE.md  Cargo.toml  README.md  TESTING_FORTH_REPL.md  build.rs  test.qtr
.cargo/: config.toml
benchmarks/: BASELINE.md  CURRENT_IR_ANALYSIS.md  LLVM18_OPTIMIZATION.md  PHASE7_COMPLETE.md  PHASE7_RESULTS.md  README.md  bench_arithmetic_portable.fth  bench_factorial_gforth.fth  benchmark_gforth.sh  compare_simple.sh  comparison_suite.md  control_flow.fth  perf_arithmetic.fth  perf_factorial.fth  perf_fibonacci.fth  perf_nested_loops.fth  simple_arithmetic.fth  test_add.fth
docs/: README.md  adding-llvm-primitives.md  aot-compilation.md  arithmetic.md  control-flow.md  error-handling.md  io.md  jit-compilation.md  llvm-global-strings-notes.md  memory.md  metaprogramming.md  stacks.md  strings.md  word-reference.md
examples/: emit_test.qtr  hello.fth  io_words.qtr  key_emit_combined.qtr  key_test.qtr  test_key_emit.qtr
forth/: compiler.fth  compiler_doloop.fth  test_compile_if.fth
runtime/: Makefile  runtime.c
src/: ast.rs  ast_forth.rs  dictionary.rs  lib.rs  llvm_codegen.rs  llvm_forth.rs  main.rs  runtime.rs  stack.rs  words.rs
stdlib/: comparison.fth  compiler.fth  core.fth  io.fth  math.fth  repl.fth  stack.qrt  test-framework.fth  tests.fth
tests/: basic_tests.fth  comment_tests.rs  comparison_tests.fth  comparison_tests.rs  control_flow_tests.rs  evaluate_catch_tests.rs  forth_integration_tests.rs  integration_tests.rs  jit_primitives_tests.fth  llvm_codegen_tests.rs  memory_tests.rs  output_tests.rs  parser_tests.rs  (+11 more)
(+1 files in other folders)
