[package]
name = "quarter"
version = "0.2.0"
edition = "2024"

[lib]
name = "quarter"
path = "src/lib.rs"
crate-type = ["lib", "staticlib"]

[dependencies]
rustyline = "14.0"
inkwell = { version = "0.6.0", features = ["llvm18-1"] }
lazy_static = "1.5"

[profile.release]
# LTO disabled due to runtime.a linking
lto = false
codegen-units = 1    # Better optimization with single codegen unit
opt-level = 3        # Maximum optimization

[profile.dev]
# No LTO for dev builds - keep them fast